// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddNote component disables submit button when input is blank 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError
        message="You must select a folder in which to place your note."
      >
        <div
          className="validation-error"
        >
          You must select a folder in which to place your note.
        </div>
      </ValidationError>
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;

exports[`AddNote component does not display an error message when folder is clicked 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={true}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError />
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;

exports[`AddNote component enables submit button when valid note name, folder, and content are provided 1`] = `
<AddNote
  location={
    Object {
      "state": Object {
        "folderId": null,
      },
    }
  }
>
  <form
    onSubmit={[Function]}
  >
    <label
      htmlFor="add-note"
    >
      Enter name for a new note: 
    </label>
    <input
      className="note-name"
      id="add-note"
      name="add-note"
      onChange={[Function]}
      required={true}
      type="text"
    />
    <ValidationError />
    <fieldset>
      <legend>
        Select a folder to put the new note in: 
      </legend>
    </fieldset>
    <ValidationError />
    <label
      htmlFor="content"
    >
      Enter note content here:
    </label>
    <textarea
      className="note-content"
      cols="50"
      id="content"
      name="content"
      onChange={[Function]}
      placeholder="Type your note here..."
      required={true}
      rows="5"
    />
    <ValidationError />
    <button
      disabled={false}
      type="submit"
    >
      Add Note
    </button>
  </form>
</AddNote>
`;

exports[`AddNote component renders an error message when no content is added to the note 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError
        message="You must select a folder in which to place your note."
      >
        <div
          className="validation-error"
        >
          You must select a folder in which to place your note.
        </div>
      </ValidationError>
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <ValidationError
        message="You must add content to your note and it must contain at least one character."
      >
        <div
          className="validation-error"
        >
          You must add content to your note and it must contain at least one character.
        </div>
      </ValidationError>
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;

exports[`AddNote component renders an error message when no folder is clicked 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <ValidationError
        message="The note must be named and the name must contain at least one character."
      >
        <div
          className="validation-error"
        >
          The note must be named and the name must contain at least one character.
        </div>
      </ValidationError>
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError
        message="You must select a folder in which to place your note."
      >
        <div
          className="validation-error"
        >
          You must select a folder in which to place your note.
        </div>
      </ValidationError>
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <ValidationError
        message="You must add content to your note and it must contain at least one character."
      >
        <div
          className="validation-error"
        >
          You must add content to your note and it must contain at least one character.
        </div>
      </ValidationError>
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;

exports[`AddNote component renders an error message when the note name input contains no characters 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <ValidationError
        message="The note must be named and the name must contain at least one character."
      >
        <div
          className="validation-error"
        >
          The note must be named and the name must contain at least one character.
        </div>
      </ValidationError>
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError
        message="You must select a folder in which to place your note."
      >
        <div
          className="validation-error"
        >
          You must select a folder in which to place your note.
        </div>
      </ValidationError>
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;

exports[`AddNote component renders the UI as expected 1`] = `
<TestComponent>
  <AddNote
    location={
      Object {
        "state": Object {
          "folderId": null,
        },
      }
    }
  >
    <form
      onSubmit={[Function]}
    >
      <label
        htmlFor="add-note"
      >
        Enter name for a new note: 
      </label>
      <input
        className="note-name"
        id="add-note"
        name="add-note"
        onChange={[Function]}
        required={true}
        type="text"
      />
      <fieldset>
        <legend>
          Select a folder to put the new note in: 
        </legend>
        <div
          key="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b0715efe-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Important
          </label>
        </div>
        <div
          key="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07161a6-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Super
          </label>
        </div>
        <div
          key="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
        >
          <input
            checked={false}
            id="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
            name="folder"
            onChange={[Function]}
            required={true}
            type="radio"
            value="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          />
          <label
            htmlFor="b07162f0-ffaf-11e8-8eb2-f2801f1b9fd1"
          >
            Spangley
          </label>
        </div>
      </fieldset>
      <ValidationError
        message="You must select a folder in which to place your note."
      >
        <div
          className="validation-error"
        >
          You must select a folder in which to place your note.
        </div>
      </ValidationError>
      <label
        htmlFor="content"
      >
        Enter note content here:
      </label>
      <textarea
        className="note-content"
        cols="50"
        id="content"
        name="content"
        onChange={[Function]}
        placeholder="Type your note here..."
        required={true}
        rows="5"
      />
      <button
        disabled={true}
        type="submit"
      >
        Add Note
      </button>
    </form>
  </AddNote>
</TestComponent>
`;
